# lab4

./: CMakeLists.txt
homography_data/: point_measurements.txt
scripts/computer_vision/: sift_template.py
src/: racecar.rviz
src-master/: README.md
src-master/base/racecar/racecar/launch/: mux.launch
src-master/base/razor_imu_m0_driver/launch/: driver_node.launch
src/base/racecar/racecar/config/racecar-v2/: vesc.yaml
src/base/racecar/racecar/launch/includes/common/: sensors.launch.xml
src/base/razor_imu_m0_driver/src/: factory_firmware_driver.cpp
src/racecar_simulator/launch/: simulate.launch
src/range_libc/pywrapper/: RangeLibc.cpp
src/visual_servoing/: CMakeLists.txt  package.xml
src/visual_servoing/launch/: parking_deploy.launch
src/visual_servoing/scripts/: cone_detector.py  homography_transformer.py  parking_controller.py
src/visual_servoing/scripts/computer_vision/: color_segmentation.py  sift_template.py
src/wall_follower/: CMakeLists.txt  log.npz  params.yaml  wall_follower.rviz
src/wall_follower/launch/: only_safety.launch  safe_follower.launch  wall_follower.launch
src/wall_follower/src/: log.npz  metrics.py  safety_controller.py  wall_follower.py
